--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'easymvp-rx2'
 
 android {
     compileSdkVersion 28
@@ -34,10 +35,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha04'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha03'
 
-    implementation 'androidx.room:room-runtime:2.1.0-alpha06'
+    implementation 'androidx.room:room-rxjava2:2.1.0-alpha06'
     annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha06'
 
-    implementation 'com.hannesdorfmann.mosby3:mvp:3.1.1'
+//    implementation 'com.hannesdorfmann.mosby3:mvp:3.1.1'
 
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
