--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url  "http://dl.bintray.com/6thsolution/easymvp" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.sixthsolution.easymvp:easymvp-plugin:1.2.0-beta8'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url  "http://dl.bintray.com/6thsolution/easymvp" }
     }
 }
 
