--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
