--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,10 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    implementation 'com.google.dagger:dagger:2.21'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.21'
 }
