--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url  "http://dl.bintray.com/6thsolution/easymvp" }
     }
     dependencies {
